--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,39 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
+  min-height: 100vh;
+  min-width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+}
+
+.customer-card {
+  background-color: rgba(255, 255, 255, 12);
+  background-image: url('../public/resources/images/pattern-curve.svg');
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: bottom left;
+}
+
+.main-container {
+  background: linear-gradient(135deg, rgba(250, 254, 255, 1) 0%, rgba(228, 248, 251, 1) 100%);
+}
+
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
